@@ -25,6 +25,8 @@
    $Date$ $Revision$
    */ 
 
+#include <inttypes.h>
+
 #import	<Foundation/NSArray.h>
 #import	<Foundation/NSAutoreleasePool.h>
 #import	<Foundation/NSData.h>
